# stock-briefing-agent

./: .env.example  .gitignore  PYTHON_CODE_CONVENTIONS.md  package-lock.json  package.json  pyproject.toml
src/: index.ts  main.py
src/analyzer/: briefing-engine.ts  briefing_engine.py
src/bot/: telegram-bot.ts  telegram_bot.py
src/collector/: market_collector.py  news_collector.py
src/collectors/: index.ts  market-collector.ts  news-collector.ts
src/commands/: brief-now.ts  brief_now.py
src/common/: config.py  logger.py  types.py
src/scheduler/: index.ts  scheduler_service.py
src/types/: index.ts
src/utils/: logger.ts
