[project]
name = "stock-briefing-agent"
version = "1.0.0"
description = "AI 기반 주식/ETF 투자 브리핑 텔레그램 봇"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "python-telegram-bot>=21.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
]

[project.scripts]
brief = "src.commands.brief_now:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
